--- a/examples/network/nodeStyles/newShapes.html
+++ b/examples/network/nodeStyles/newShapes.html
@@ -5,10 +5,37 @@
 
   <style type="text/css">
     #mynetwork {
+      position: relative;
+      display: inline-block;
       width: 100%;
       height: 600px;
       border: 1px solid lightgray;
       background-image: url('../../../lib/assets/grid.png');
+    }
+
+    #floating-panel1 {
+      position: absolute;
+      width: 36px;
+      height: 220px;
+      top: 55px;
+      left: 15px;
+      z-index: 50000;
+      background-color: rgb(224, 224, 224);
+      padding: 50px;
+      border: 1px solid rgb(196, 196, 196);
+      border-radius: 1px;
+    }
+
+    #floating-panel2 {
+      position: absolute;
+      width: 265px;
+      top: 55px;
+      right: 15px;
+      z-index: 5000;
+      background-color: rgb(224, 224, 224);
+      padding: 5px;
+      border: 1px solid rgb(66, 72, 79);
+      border-radius: 1px;
     }
   </style>
 
@@ -24,17 +51,33 @@
 
     function draw() {
       nodes = [
-        {id: 1, font: { size: 20},          label: 'circle',  shape: 'circle', x: 200, y: 150},
-        {id: 2, font: { size: 30}, size:40, label: 'hexagon', shape: 'hexagon', x: 500, y: 150},
-        {id: 3, font: { size: 30}, size:40, label: 'big square',  shape: 'square', x: 500, y: 350},
-        {id: 4, font: { size: 14, color: '#606060', face: 'arial', align: 'left' }, label: '', shape: 'toast', x: 800, y: 150},
+        {id: 1, font: { size: 50}, size:40, label: '',  shape: 'dot', x: 100, y: 150, margin: {left: 10, top: 10, right: 10, bottom: 10}},
+        {id: 2, font: { size: 30}, size:40, label: 'hexagon', shape: 'hexagon', x: 300, y: 150},
+        {id: 3, font: { size: 30}, size:40, label: 'big square',  shape: 'square', x: 300, y: 350},
+        { id: 4,
+          font: { size: 14, color: '#606060', face: 'arial', align: 'center', valign: 0},
+          label: '         Query data', shape: 'toast', x: 500, y: 150, margin: {left: 5, top: 5, right: 5, bottom: 5},
+          color: { background: '#f0f0f0', border: '#2b7ce9',
+                   hover: { background: '#f0fff0', border: '#2b7cff', },
+                   highlight: { background: '#f0fff0', border: '#2b7ce9', }},
+        },
+        {id: 5, font:{ size: 18} , size: 18,  label: ' ', shape: 'gate', margin: {left: 0, top: 0, right: 0, bottom: 0},
+               color: { background: '#f0f0f0', border: '#2b7ce9',
+                   hover: { background: '#f0fff0', border: '#2b7cff', },
+                   highlight: { background: '#f0fff0', border: '#2b7ce9', }},x: 700, y: 100},
+        {id: 6, font:{ size: 18} , size: 18,  label: ' ', shape: 'gate', margin: {left: 0, top: 0, right: 0, bottom: 0},
+               color: { background: '#f0f0f0', border: '#2b7ce9',
+                   hover: { background: '#f0fff0', border: '#2b7cff', },
+                   highlight: { background: '#f0fff0', border: '#2b7ce9', }},x: 700, y: 200},
       ];
 
       edges = [
         {from: 1, to: 2, arrows: { to: { enabled: true}}},
         {from: 2, to: 3, arrows: { to: { enabled: true}}},
         {from: 3, to: 4, arrows: { to: { enabled: true}}},
-        {from: 1, to: 3, arrows: { to: { enabled: true}}, x: 800, y: 150}
+        {from: 1, to: 3, arrows: { to: { enabled: true}}},
+        {from: 4, to: 5, arrows: { from: { enabled: true, type: 'diamond'}, to: { enabled: true}, middle: {enabled: true, type: 'diamond'}}, dashes: true},
+        {from: 4, to: 6, arrows: { from: { enabled: true, type: 'diamond'}, to: { enabled: true}}, dashes: true},
       ];
 
       // create a network
@@ -57,9 +100,21 @@
 
 
 <body onload="draw()">
+<div id="info" style="height: 30px;"></div>
+<div>
+  <div style="display: inline-block; width: 20px;">
+  </div>
 
-<div id="mynetwork"></div>
+    <div id="mynetwork">
+    </div>
+    <div id="floating-panel1">
+    </div>
+    <div id="floating-panel2">
+    </div>
 
-<div id="info"></div>
+</div>
+
+
+
 </body>
 </html>
