--- a/examples/network/nodeStyles/shapesSelected.html
+++ b/examples/network/nodeStyles/shapesSelected.html
@@ -29,9 +29,14 @@
       edges = [
         { id: 12, from: 1, to: 2,
           arrows: {
+            from: {
+              enabled: true,
+              type: "diamond",
+
+            },
             to: { enabled: true},
             middle: {
-              enabled: true,
+              enabled: false,
               type: "image",
               imageWidth: 24,
               imageHeight: 24,
@@ -70,6 +75,7 @@
           navigationButtons: true,
           selectable: true,
           selectConnectedEdges: false,
+          hover: true
         }
       };
       network = new vis.Network(container, data, options);
@@ -82,6 +88,27 @@
           ctx.strokeStyle = "#ff904d";
           ctx.strokeRect(bound.left - 5, bound.top - 5, bound.right - bound.left + 10, bound.bottom - bound.top + 10);
         }
+        ctx.strokeStyle = "#ff0000";
+        ctx.strokeRect(0 - 1, 0 - 1, 2, 2);
+        ctx.strokeRect(100 - 1, 0 - 1, 2, 2);
+        ctx.strokeRect(200 - 1, 0 - 1, 2, 2);
+        ctx.strokeRect(300 - 1, 0 - 1, 2, 2);
+
+        ctx.strokeRect(0   - 1, 100 - 1, 2, 2);
+        ctx.strokeRect(100 - 1, 100 - 1, 2, 2);
+        ctx.strokeRect(200 - 1, 100 - 1, 2, 2);
+        ctx.strokeRect(300 - 1, 100 - 1, 2, 2);
+
+        ctx.strokeRect(0   - 1, 200 - 1, 2, 2);
+        ctx.strokeRect(100 - 1, 200 - 1, 2, 2);
+        ctx.strokeRect(200 - 1, 200 - 1, 2, 2);
+        ctx.strokeRect(300 - 1, 200 - 1, 2, 2);
+
+        ctx.strokeRect(0   - 1, 300 - 1, 2, 2);
+        ctx.strokeRect(100 - 1, 300 - 1, 2, 2);
+        ctx.strokeRect(200 - 1, 300 - 1, 2, 2);
+        ctx.strokeRect(300 - 1, 300 - 1, 2, 2);
+
         var seledge = network.getSelectedEdges();
         if (seledge.length > 0) {
         }
@@ -106,6 +133,9 @@
         ctx.fill();
         ctx.stroke();
         */
+      }).on("hoverEdge", function (e) {
+        console.log(e)
+
       });
     }
   </script>
