update nav layout

--- a/examples/network/nodeStyles/shapesSelected.html
+++ b/examples/network/nodeStyles/shapesSelected.html
@@ -5,7 +5,7 @@
 
   <style type="text/css">
     #mynetwork {
-      width: 1000px;
+      width: 1018px;
       height: 500px;
       border: 1px solid lightgray;
     }
@@ -146,7 +146,7 @@
 <p>
   Nodes can have all sorts of shapes. Note the exception where the nodes with text inside and the text type's size are determined by the font size, not the node size.
 </p>
-<div id="mynetwork"></div>
+<div id="mynetwork" style="background-image: url(../../../lib/assets/1601284414281.png);"></div>
 
 <div id="info"></div>
 </body>
