add button show hide sample

--- a/examples/network/nodeStyles/shapesSelected.html
+++ b/examples/network/nodeStyles/shapesSelected.html
@@ -5,7 +5,7 @@
 
   <style type="text/css">
     #mynetwork {
-      width: 1018px;
+      width: 98%;
       height: 500px;
       border: 1px solid lightgray;
     }
